feat: migrate dashboard to new logistics schema
Align backend, seed data, and frontend filters with the new CSV order model, and route forecasting through deterministic NLQ-driven services for more reliable analytics.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>